[package]
name = "gzset"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "GPU accelerated learned sorted set module for Valkey/Redis"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "xtask"
path = "src/bin/xtask.rs"

[dependencies]
redis-module = "2.0.7"
once_cell = "1"
ordered-float = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
portpicker = "0.1"
redis = "0.25"
heck = "0.5"

[dev-dependencies]
quickcheck = "1"
which = "4"

