[package]
name = "gzset"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "GPU accelerated learned sorted set module for Valkey/Redis"
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "xtask"
path = "src/bin/xtask.rs"

[[bench]]
name = "gzpop"
harness = false
required-features = ["bench"]

[[bench]]
name = "format"
harness = false
required-features = ["bench"]

[[bench]]
name = "gzrange"
harness = false
required-features = ["bench"]

[dependencies]
redis-module = "2.0.7"
once_cell = "1"
ordered-float = "2"
smallvec = { version = "1", features = ["union"] }
anyhow = "1"
ryu = "1"
rustc-hash = "1"
hashbrown = { version = "0.14", features = ["raw"] }
ahash = "0.8"
clap = { version = "4", features = ["derive"] }
portpicker = "0.1"
redis = "0.25"
libc = "0.2"
heck = "0.5"
rand = "0.8"

[dev-dependencies]
quickcheck = "1"
which = "4"
criterion = "0.5"

[features]
default = []
bench = []
mem_profile = []
redis-module = []
fast-hash = []
reply-double = []

[profile.release]
debug = 1

