[package]
name = "gzset"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "GPU accelerated learned sorted set module for Valkey/Redis"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
redis-module = "2.0.7"
once_cell = "1"
ordered-float = "2"

[dev-dependencies]
redis = "0.25"
portpicker = "0.1"
quickcheck = "1"

